--- a/i18n/en/angular-surveys.json
+++ b/i18n/en/angular-surveys.json
@@ -91,8 +91,10 @@
                 },
                 "url":{
                     "name": "URL"
+                }, 
+                "file":{ 
+                    "name": "FILE"
                 }
-
 
             },
             "text": "Question text",
